--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "## Installation\n",
     "\n",
-    "The current version of the tutorial is tested with IMP 2.17. This version can be installed on many plaforms using [Anaconda](https://anaconda.org/salilab/imp), which provides all the dependencies.\n",
+    "The current version of the tutorial is tested with IMP 2.17. This version can be installed on many platforms using [Anaconda](https://anaconda.org/salilab/imp), which provides all the dependencies.\n",
     "\n",
     "To work through the example on your own system, you will need the following\n",
     "packages installed in addition to [IMP itself](https://integrativemodeling.org/nightly/doc/manual/installation.html):\n",
@@ -379,7 +379,7 @@
     "\n",
     "The **Molecules** contains structures (ie, particles with coordinates, masses and radii) classified by several **resolutions**: Atomic (Resolution 0), Residues (Resolution 1), Fragments (Resolution > 1), and the Gaussians (Densities). \n",
     "\n",
-    "All structures (except the densities) are represented by Spheres with appropriate radius and mass. The resolutions concur simultanously, therefore the same part of the molecule can be represented by several resolutions."
+    "All structures (except the densities) are represented by Spheres with appropriate radius and mass. The resolutions concur simultaneously, therefore the same part of the molecule can be represented by several resolutions."
    ]
   },
   {
@@ -539,7 +539,7 @@
     "* `color`: The color used in the output coordinates file. Uses [Chimera names](https://www.cgl.ucsf.edu/chimera/docs/UsersGuide/colortables.html) (e.g. \"red\"), or R,G,B values as three comma-separated floating point numbers from 0 to 1 (e.g. \"1.0, 0.0, 0.0\") or a 6-digit hex string starting with '#' (e.g. 0xff0000).\n",
     "* `fasta_fn`: Name of the FASTA file containing the sequence for this Molecule.\n",
     "* `fasta_id`: header line of FASTA (without the \">\" character).\n",
-    "* `pdb_fn`: Name of PDB file with coordinates (if available). If left empty, will set up as BEADS (you can also explictly specify \"BEADS\"). Can also write \"IDEAL_HELIX\".\n",
+    "* `pdb_fn`: Name of PDB file with coordinates (if available). If left empty, will set up as BEADS (you can also explicitly specify \"BEADS\"). Can also write \"IDEAL_HELIX\".\n",
     "* `chain`: Chain ID of this Domain in the PDB file.\n",
     "* `residue_range`: Comma delimited pair defining the indexes of the first and the last residue of the Domain. Can leave empty or use 'all' for entire sequence from PDB file. The second item in the pair can be 'END' to select the last residue in the sequence defined in the FASTA file.\n",
     "* `pdb_offset`: PMI always numbers residues starting from 1 (to match the FASTA file). If the PDB does not match this numbering, an offset can be specified here. It is added to the PDB residue number to get the FASTA number. For example, if the first residue in the PDB file is numbered 10, use an offset of -9.\n",
@@ -603,7 +603,7 @@
     "`max_srb_rot` are the maximum translation and rotation of the Super Rigid Body mover\n",
     "and `max_bead_trans` is the maximum translation of the Bead Mover.\n",
     "\n",
-    "The excecution of the macro will create the representation (as a molecular hierarchy) by reading the topology file, then return the root of this hierarchy (`root_hier`) and the degrees of freedom (`dof`) objects, both of which are used later on.\n"
+    "The execution of the macro will create the representation (as a molecular hierarchy) by reading the topology file, then return the root of this hierarchy (`root_hier`) and the degrees of freedom (`dof`) objects, both of which are used later on.\n"
    ]
   },
   {
@@ -1205,7 +1205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can get a given cluster by using the square bracket, as in lists, for instance `are[0]` is the cluster with index 0. We can iterate on the members of the cluster to display the infos. Afterwords, we save the coordinates of the cluster in a rmf file."
+    "We can get a given cluster by using the square bracket, as in lists, for instance `are[0]` is the cluster with index 0. We can iterate on the members of the cluster to display the infos. Afterwards, we save the coordinates of the cluster in a rmf file."
    ]
   },
   {
