PDB-Dev is now PDB-IHM; link to latest IMP docs

--- a/rnapoliii/analysis/.template.analysis.ipynb
+++ b/rnapoliii/analysis/.template.analysis.ipynb
@@ -543,7 +543,7 @@
    "source": [
     "# Further reading {#further}\n",
     "\n",
-    "Once analysis is complete and models are produced that completely sample the space at a reasonable precision, fit the input and unused data, and make biological sense, it is time to proceed to deposit them in the [PDB-Dev database](https://pdb-dev.wwpdb.org/). See the deposition tutorial in the `rnapoliii/deposition` directory for more details."
+    "Once analysis is complete and models are produced that completely sample the space at a reasonable precision, fit the input and unused data, and make biological sense, it is time to proceed to deposit them in the [PDB-IHM database](https://pdb-ihm.org/). See the deposition tutorial in the `rnapoliii/deposition` directory for more details."
    ]
   }
  ],
