--- a/rnapoliii/analysis/analysis.ipynb
+++ b/rnapoliii/analysis/analysis.ipynb
@@ -129,7 +129,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Here we will use the [IMP.sampcon](https://integrativemodeling.org/2.17.0/doc/ref/namespaceIMP_1_1sampcon.html) module, specifically its command line interface, `imp_sampcon`. This tool has a number of modes (use `imp_sampcon --help` to see more information on them). First we will use `imp_sampcon select_good`, which filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
+        "Here we will use the [IMP.sampcon](https://integrativemodeling.org/2.21.0/doc/ref/namespaceIMP_1_1sampcon.html) module, specifically its command line interface, `imp_sampcon`. This tool has a number of modes (use `imp_sampcon --help` to see more information on them). First we will use `imp_sampcon select_good`, which filters models based on score and parameter thresholds, i.e. it will examine all of the models from all frames and all replicas, and potentially over multiple runs (although we have only a single run in this case).\n",
         "\n",
         "In this script, required flags are:\n",
         " - `-rd`, which specifies the directory containing sampling output folders\n",
@@ -556,7 +556,7 @@
       "source": [
         "# Further reading<a id=\"further\"></a>\n",
         "\n",
-        "Once analysis is complete and models are produced that completely sample the space at a reasonable precision, fit the input and unused data, and make biological sense, it is time to proceed to deposit them in the [PDB-Dev database](https://pdb-dev.wwpdb.org/). See the deposition tutorial in the `rnapoliii/deposition` directory for more details."
+        "Once analysis is complete and models are produced that completely sample the space at a reasonable precision, fit the input and unused data, and make biological sense, it is time to proceed to deposit them in the [PDB-IHM database](https://pdb-ihm.org/). See the deposition tutorial in the `rnapoliii/deposition` directory for more details."
       ]
     }
   ],
