--- a/rnapoliii/deposition/.template.Deposition.ipynb
+++ b/rnapoliii/deposition/.template.Deposition.ipynb
@@ -15,18 +15,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this tutorial we will introduce the procedure used to deposit integrative modeling studies in the [PDB-Dev](https://pdb-dev.wwpdb.org/) database in mmCIF format.\n",
+    "In this tutorial we will introduce the procedure used to deposit integrative modeling studies in the [PDB-IHM](https://pdb-ihm.org/) database in mmCIF format.\n",
     "\n",
-    "We will demonstrate the procedure using [IMP](https://integrativemodeling.org/) and its PMI module, but the database will accept integrative models from any software, as long as they are compliant mmCIF files (e.g. there are several HADDOCK and Rosetta models already in PDB-Dev). "
+    "We will demonstrate the procedure using [IMP](https://integrativemodeling.org/) and its PMI module, but the database will accept integrative models from any software, as long as they are compliant mmCIF files (e.g. there are several HADDOCK and Rosetta models already in PDB-IHM). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Why PDB-Dev? {#whypdbdev}\n",
+    "# Why PDB-IHM? {#whypdbihm}\n",
     "\n",
-    "PDB-Dev is a database run by the wwPDB. It is specifically for the deposition of *integrative* models, i.e. models generated using more than one source of experimental data. (Models that use only one experiment generally go in PDB; models that use no experimental information - theoretical models - go in [ModelArchive](https://www.modelarchive.org/).)"
+    "PDB-IHM is a database run by the wwPDB. It is specifically for the deposition of *integrative* models, i.e. models generated using more than one source of experimental data. (Models that use only one experiment generally go in PDB; models that use no experimental information - theoretical models - go in [ModelArchive](https://www.modelarchive.org/).)"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on ``~IMP.pmi.macros.ReplicaExchange0``'s `test_mode`:"
+    "We can save time when it comes to the actual sampling by skipping it entirely (and using the previously-generated trajectory) by turning on ``~IMP.pmi.macros.ReplicaExchange``'s `test_mode`:"
    ]
   },
   {
@@ -909,14 +909,14 @@
     "\n",
     "mmCIF files can be viewed in many viewers. However, most viewers do not yet support the integrative modeling extensions, and so may only show the atomic parts of the model (if any). Integrative models can be viewed in [ChimeraX](https://www.rbvi.ucsf.edu/chimerax/) - be sure to use a recent nightly build, and open the file from the ChimeraX command line using the `format ihm` option, e.g. `open rnapoliii.cif format ihm`. (If you also want to see the DCD file, add `ensembles true` to the end of your command line to load it and then use the ChimeraX `coordset` command to manipulate the set of coordinates, e.g. `coordset slider #1.3.2`.)\n",
     "\n",
-    "ChimeraX also supports downloading and displaying structures directly from the [PDB-Dev](https://pdb-dev.wwpdb.org/) database, for example from the ChimeraX command line `open 10 from pdbdev`.\n",
+    "ChimeraX also supports downloading and displaying structures directly from the precursor [PDB-Dev](https://pdb-dev.wwpdb.org/) database, for example from the ChimeraX command line `open 10 from pdbdev`.\n",
     "\n",
-    "> Note that even though PDB-Dev is still quite small, the models vary widely in composition, e.g.\n",
+    "> Note that even though PDB-IHM is still quite small, the models vary widely in composition, e.g.\n",
     ">\n",
-    "> - Some models (e.g. PDBDEV_00000018) are atomic and look much like a traditional \"PDB\" x-ray structure.\n",
-    "> - Some models (e.g. PDBDEV_00000002) contain multiple states that have different sequences (this particular case contains exosome in nucleus-localized and cytoplasm-localized forms).\n",
-    "> - Some models are not of proteins at all - e.g. PDBDEV_00000008 is a model of chromatin, part of the fly genome.\n",
-    "> - Some models contain multiple representations - e.g. PDBDEV_00000012, a model of the yeast nuclear pore complex, contains both models of the scaffold (ring) and the flexible FG repeat regions which occupy the center of the pore.\n",
+    "> - Some models (e.g. [8zzi](https://pdb-ihm.org/entry.html?8ZZI)) are atomic and look much like a traditional \"PDB\" x-ray structure.\n",
+    "> - Some models (e.g. [8zz2](https://pdb-ihm.org/entry.html?8ZZ2)) contain multiple states that have different sequences (this particular case contains exosome in nucleus-localized and cytoplasm-localized forms).\n",
+    "> - Some models are not of proteins at all - e.g. [8zz8](https://pdb-ihm.org/entry.html?8ZZ8) is a model of chromatin, part of the fly genome.\n",
+    "> - Some models contain multiple representations - e.g. [8zzc](https://pdb-ihm.org/entry.html?8ZZC), a model of the yeast nuclear pore complex, contains both models of the scaffold (ring) and the flexible FG repeat regions which occupy the center of the pore.\n",
     "\n",
     "[VMD](http://www.ks.uiuc.edu/Research/vmd/) is also reportedly working on support in their forthcoming 1.9.4 release.\n",
     "\n",
@@ -1002,7 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly we could explore any integrative model deposited in PDB-Dev. For example we can look at PDB-Dev \\#14, a [HADDOCK](http://www.bonvinlab.org/software/haddock2.2/) model:"
+    "Similarly we could explore any integrative model deposited in PDB-IHM. For example we can look at PDB entry 8ZZE, a [HADDOCK](http://www.bonvinlab.org/software/haddock2.2/) model:"
    ]
   },
   {
@@ -1012,7 +1012,7 @@
    "outputs": [],
    "source": [
     "import urllib.request\n",
-    "with urllib.request.urlopen('https://pdb-dev.wwpdb.org/static/cif/PDBDEV_00000014.cif') as fh:\n",
+    "with urllib.request.urlopen('https://pdb-ihm.org/cif/8zze.cif') as fh:\n",
     "    s, = ihm.reader.read(fh)\n",
     "print(s.title, s.restraints, s.ensembles, s.state_groups)"
    ]
