--- a/rnapoliii/modeling/Tutorial.ipynb
+++ b/rnapoliii/modeling/Tutorial.ipynb
@@ -40,7 +40,7 @@
     "    \n",
     "Each repository above contains the scripts and the data, as well as all the results, that are needed to reproduce the published results. \n",
     "\n",
-    "Integrative modeling studies are deposited in the [PDB-Dev database](https://pdb-dev.wwpdb.org/), which is run by wwPDB. These deposits may link to auxiliary files in other databases (e.g. EMDB, SASBDB) or by DOI (e.g. Zenodo)."
+    "Integrative modeling studies are deposited in the [PDB-IHM database](https://pdb-ihm.org/), which is run by wwPDB. These deposits may link to auxiliary files in other databases (e.g. EMDB, SASBDB) or by DOI (e.g. Zenodo)."
    ]
   },
   {
@@ -1479,7 +1479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In `rnapoliii/deposition` we will describe the procedure used to deposit integrative modeling studies in the [PDB-Dev](https://pdb-dev.wwpdb.org/) database in mmCIF format."
+    "In `rnapoliii/deposition` we will describe the procedure used to deposit integrative modeling studies in the [PDB-IHM](https://pdb-ihm.org/) database in mmCIF format."
    ]
   }
  ],
